--- a/Productos.html
+++ b/Productos.html
@@ -72,12 +72,12 @@
         <section class="contenedor-productos">
             <div class="tituloCatalogo">CATALOGO DE PRODUCTOS</div>
             <div class="contenedor-productos">
-                <div class="box box1"><img src="../Productos/Disco Solido.jpg" alt=""><p>Disco Sólido</p><p>Precio $ 400.000</p></div>
-                <div class="box box2"><img src="../Productos/fuente.jpg" alt=""><p>Fuente</p><p>Precio $ 400.000</p></div>
-                <div class="box box3"><img src="../Productos/gabinete.jpg" alt=""><p>Gabinete</p><p>Precio $ 400.000</p></div>
-                <div class="box box4"><img src="../Productos/grafica.jpg" alt=""><p>Tarjeta Gráfica</p><p>Precio $ 400.000</p></div>
-                <div class="box box5"><img src="../Productos/i9.jpg" alt=""><p>Procesador</p><p>Precio $ 400.000</p></div>
-                <div class="box box6"><img src="../Productos/RAM.jpg" alt=""><p>Memoria RAM</p><p>Precio $ 400.000</p></div>
+                <div class="box box1"><img src="Productos/Disco-Solido.jpg" alt=""><p>Disco Sólido</p><p>Precio $ 400.000</p></div>
+                <div class="box box2"><img src="Productos/fuente.jpg" alt=""><p>Fuente</p><p>Precio $ 400.000</p></div>
+                <div class="box box3"><img src="Productos/gabinete.jpg" alt=""><p>Gabinete</p><p>Precio $ 400.000</p></div>
+                <div class="box box4"><img src="Productos/grafica.jpg" alt=""><p>Tarjeta Gráfica</p><p>Precio $ 400.000</p></div>
+                <div class="box box5"><img src="Productos/i9.jpg" alt=""><p>Procesador</p><p>Precio $ 400.000</p></div>
+                <div class="box box6"><img src="Productos/RAM.jpg" alt=""><p>Memoria RAM</p><p>Precio $ 400.000</p></div>
             </div>
             <!-- TERMINA CATALOGO DE PRODUCTOS -->
     </main>
